# ikanban

./: .gitignore  .gitmodules  AGENTS.md  ARCH.md  Cargo.toml  Makefile  README.md  TODO.md  package.json
crates/ikanban-core/: Cargo.toml
crates/ikanban-core/src/: db.rs  error.rs  lib.rs  main.rs  state.rs
crates/ikanban-core/src/entities/: direct_merge.rs  execution_process.rs  execution_process_logs.rs  mod.rs  pr_merge.rs  project.rs  response.rs  session.rs  task.rs
crates/ikanban-core/src/migrator/: m001_create_tables.rs  m002_add_sessions_executions_merges.rs  m003_extend_tasks.rs  m004_execution_process_logs.rs  mod.rs
crates/ikanban-core/src/models/: project.rs  task.rs
crates/ikanban-core/src/routes/: executions.rs  health.rs  mod.rs  projects.rs  sessions.rs  tasks.rs  ws.rs
crates/ikanban-core/src/services/: mod.rs  pr_monitor.rs
crates/ikanban-tui/: Cargo.toml
crates/ikanban-tui/src/: action.rs  api.rs  app.rs  cli.rs  components.rs  config.rs  errors.rs  logging.rs  main.rs  models.rs  tui.rs  ui.rs  ws.rs  ws_client.rs
crates/ikanban-tui/src/components/: help.rs  input.rs  projects.rs  tasks.rs
docs/runtime/: conversation-manager.md
src/: app.rs  app.tsx  index.tsx  keyboard.rs  lib.rs  main.rs  service.rs
src/agent/: instance.ts  registry.ts  runtime.ts
src/app/: App.tsx
src/app/views/: log-view.tsx  task-board-view.tsx
src/components/: Board.tsx  Card.tsx  Column.tsx  HelpOverlay.tsx  Input.tsx  LogPanel.tsx
src/db/: mod.rs  models.rs
src/domain/: conversation.ts  task.ts
src/executor/: mod.rs  msg_store.rs
src/executor/opencode/: mod.rs  normalize.rs  sdk.rs  types.rs
src/hooks/: index.ts  useAgent.ts  useKeyboard.ts  useSession.ts
src/runtime/: app-config.test.ts  app-config.ts  conversation-manager.ts  event-bus.ts  opencode-runtime.test.ts  opencode-runtime.ts  project-registry.test.ts  project-registry.ts  runtime-logger.ts  task-orchestrator.test.ts  task-orchestrator.ts  task-registry.ts
src/server/: db.rs  mod.rs  models.rs  session.rs  worktree.rs
src/state/: storage.ts  store.ts  types.ts
src/ui/: mod.rs  project_view.rs  session_view.rs  task_view.rs
src/views/: ProjectView.tsx  SessionView.tsx  TaskView.tsx
