[workspace]
resolver = "2"
members = ["crates/ikanban-core", "crates/ikanban-tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["isomo"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }

# Database (SeaORM with auto-migration)
sea-orm = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
