[package]
name = "ikanban"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "ikanban"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Server dependencies
axum = "0.8"
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "fs",
    "cors",
    "compression-gzip",
] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] }
agent-client-protocol = "0.9"
dirs = "5.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"

# UI dependencies
egui = "0.29"
eframe = "0.29"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
tempfile = "3.8"
