[package]
name = "ikanban-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "iKanban core server with HTTP/WebSocket API"

[[bin]]
name = "ikanban-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# WebSocket & streaming
futures-util = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
