[package]
name = "ikanban-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "iKanban TUI client"

[[bin]]
name = "ikanban"
path = "src/main.rs"

[dependencies]
# Core library
ikanban-core = { path = "../ikanban-core" }

# Async runtime
tokio = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# URL parsing
url = "2.5"
